@@ -9,7 +9,6 @@ import com.aztsoft.gym.domain.Customer;
 import com.aztsoft.gym.domain.CustomerRegistration;
 import com.aztsoft.gym.service.CustomerService;
 import com.aztsoft.gym.service.CustomerServiceImp;
-import com.aztsoft.gym.view.CustomerCatalogForm;
 import com.aztsoft.gym.view.CustomerForm;
 import com.aztsoft.gym.view.ViewForm;
 import com.toedter.calendar.JDateChooser;
@@ -26,16 +25,16 @@ public class CustomerControllerImp implements CustomerController {
 
     private static final int VISIT = 0;
     private CustomerForm customerForm;
-    private CustomerCatalogForm customerCatalogForm;
-    
+
     public CustomerControllerImp(ViewForm view) {
         setView(view);
         startView(view);
     }
 
     private void setView(ViewForm view){
-        if(view instanceof CustomerForm) this.customerForm = (CustomerForm) view;
-        if(view instanceof CustomerCatalogForm) this.customerCatalogForm = (CustomerCatalogForm) view;
+        if(view instanceof CustomerForm) {
+            this.customerForm = (CustomerForm) view;
+        }
     }
 
      private void startView(ViewForm view) {
@@ -43,24 +42,26 @@ public class CustomerControllerImp implements CustomerController {
     }
     
     @Override
-    public void postCustomer() {
+    public final void postCustomer() {
         CustomerService customerService = new CustomerServiceImp(customerForm);
         customerService.postCustomer(getDataRegistry());
     }
 
     private CustomerRegistration getDataRegistry() {
-
         CustomerRegistration aRegistry = new CustomerRegistration();
+
         aRegistry.setCustomer(getDataClient());
         aRegistry.setPlan((String) customerForm.cmbPlan.getSelectedItem());
         aRegistry.setRegistrationDate(customerForm.lblDate.getText());
         aRegistry.setRegistrationLimit(getFormatDate(customerForm.jdcLimitDate));
 
-        if(customerForm.cmbPlan.getSelectedIndex() > VISIT)
+        if(customerForm.cmbPlan.getSelectedIndex() > VISIT) {
             aRegistry.setRegistrationLimit(getFormatDate(customerForm.jdcLimitDate));
+        }
 
-        if(StringUtils.isNotBlank(customerForm.txtCost.getText()))
+        if(StringUtils.isNotBlank(customerForm.txtCost.getText())) {
             aRegistry.setCost(new Double(customerForm.txtCost.getText()));
+        }
 
         return aRegistry;
     }
@@ -77,7 +78,7 @@ public class CustomerControllerImp implements CustomerController {
     }
 
     private int getAgeClient() {
-        return customerForm.txtAge.getText().equals("") ? 0 : new Integer(customerForm.txtAge.getText());
+        return customerForm.txtAge.getText().equals("") ? 0 : Integer.valueOf(customerForm.txtAge.getText());
     }
 
     private String getFormatDate(JDateChooser dateChooser){
@@ -86,8 +87,8 @@ public class CustomerControllerImp implements CustomerController {
     }
 
     @Override
-    public List<CustomerRegistration> getAllCustomerRecords() {
-        CustomerService customerService = new CustomerServiceImp(customerForm);
+    public final List<CustomerRegistration> getAllCustomerRecords() {
+        CustomerService customerService = new CustomerServiceImp();
         return customerService.getAllCustomerRecords();
     }
 
